# BlockChat

./: README.md  go.mod  go.sum  todo.txt
.github/workflows/: main.yml
cmd/api-server/: bootstrap.go
cmd/benchmarks/: benchmarks  benchmarks.go
cmd/cli/: cli.go
internal/config/: config.go
internal/endpoints/: router.go  router_functions.go
internal/handlers/: balance_handler.go  block_handler.go  node_handler.go  stake_handler.go  transaction_handler.go
internal/model/: block.go  blockchain.go  node.go  request_types.go  sync_vars.go  transaction.go  wallet.go
internal/services/: helper_functions.go  stake_services.go  transaction_services.go
internal/utils/: custom_types.go  helper_functions.go
legacy/API/: main.go
legacy/cli_client/: go.mod
src/: README.md
src/API/: endpoints.go  go.mod  main.go  router.go
src/API/blockchain/: block.go  blockchain.go  config.go  endpoints.go  functional.go  node.go  request_types.go  transaction.go  wallet.go
src/blockchat_api/: Cargo.toml
src/blockchat_api/src/: main.rs
src/blockchat_api/src/blockchain_module/: block.rs  blockchain.rs  mod.rs  transaction.rs  wallet.rs
src/cli_client/: cli.go
src/dummy_api/: __init__.py  auth.py  main.py
src/webapp/: app.go
src/webapp/static/: balance.html  index.html  stake.html  transaction.html  view.html
webapp/static/: balance.html
