[package]
name = "blockchat_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.5.0"
chrono = "0.4.31"
rsa = "0.9.6"
rand = "0.8.5"
sha2 = "0.10.8"
blind-rsa-signatures = "0.15.0"
